--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
     <title>Document</title>
 </head>
-<body onload="renderDoors()">
+<body onload="renderImages()">
 
 
     <header class="header">    
@@ -22,6 +22,7 @@
         <section class="main-container">
             <h1>Your personnal photo album</h1>
             <div id="content"></div>
+            <div onclick="toggleOverlay()" id="overlay" class="overlay"></div>
         </section>
     </main>
 
