Refactors main container styles and removes overlay
Updates the main container to use the space-around justify-content property for better alignment and adds a background color. Additionally, removes the overlay element.

Fixes #123

--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     </header>
 
 
-    <main>
-        <section class="main-container">
+    <main class="main-container">
             <h1>Your personnal photo album</h1>
             <div id="content"></div>
-            <div onclick="toggleOverlay()" id="overlay" class="overlay"></div>
-        </section>
+        
     </main>
 
 
